--- a/assignment1.html
+++ b/assignment1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title><p>assignment1</p></title>
+	<title>assignment1</title>
 	<link rel="stylesheet" type="text/css" href="assignment1.css">
 </head>
 <body>
